# python_to_ts_type

./: base.py  main.py  pyproject.toml  readme.md
driver/: python_d.py  typesript_d.py
test/: py_schema.py  ts_schema.ts
