[tool.poetry]
name = "python-to-ts-type"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_to_ts_type"}]

[tool.poetry.dependencies]
python = "^3.11"
rich = "^12.6.0"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
